--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -14,8 +14,9 @@
         android:layout_marginTop="128dp"
         android:layout_marginEnd="65dp"
         android:background="@drawable/boton_redondo"
-        android:text="Button"
+        android:text="TOMAR FOTO"
         android:textColor="#E4E4E4"
+        android:onClick="takePicture"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,8 +29,9 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="67dp"
         android:background="@drawable/boton_redondo"
-        android:text="Button"
+        android:text="SUBIR FOTO"
         android:textColor="#E4E4E4"
+        android:onClick="cargarImagen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/btnTake" />
